'updated package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react.dev",
-  "version": "0.0.0",
-  "homepage": "https://flyingpierogi.github.io/react-gh-pages",
+  "version": "0.1.0",
+  "homepage": "https://flyingpierogi.github.io/juego-tiktaktoe",
   "main": "/src/index.js",
   "scripts": {
     "predeploy": "npm run build",
@@ -18,5 +18,17 @@
   },
   "devDependencies": {
     "gh-pages": "^6.1.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
